template-gitlab-runner.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: AWS CloudFormation Template to launch an EC2 instance and set it up as a GitLab runner with Docker and Google Cloud SDK

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: "AWS::EC2::KeyPair::KeyName"
    ConstraintDescription: must be the name of an existing EC2 KeyPair.

  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t3.micro
    AllowedValues:
      - t3.micro
    ConstraintDescription: must be a valid EC2 instance type.

Resources:
  EC2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: ami-0eaf7c3456e7b5b68
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Update the instance
          yum update -y

          # Install Docker
          amazon-linux-extras install docker -y
          service docker start
          usermod -a -G docker ec2-user
          chkconfig docker on

          # Install GitLab Runner
          curl -L --output /usr/local/bin/gitlab-runner https://gitlab-runner-downloads.s3.amazonaws.com/latest/binaries/gitlab-runner-linux-amd64
          chmod +x /usr/local/bin/gitlab-runner
          useradd --comment 'GitLab Runner' --create-home gitlab-runner --shell /bin/bash
          gitlab-runner install --user=gitlab-runner --working-directory=/home/gitlab-runner
          gitlab-runner start

          # Install Google Cloud SDK
          tee -a /etc/yum.repos.d/google-cloud-sdk.repo << EOM
          [google-cloud-sdk]
          name=Google Cloud SDK
          baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el7-x86_64
          enabled=1
          gpgcheck=1
          repo_gpgcheck=1
          gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
                 https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
          EOM
          yum install google-cloud-sdk -y

  InstanceSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable SSH and HTTP access
      VpcId: !Ref "AWS::NoValue" # This will use the default VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: 0.0.0.0/0

Outputs:
  InstanceId:
    Description: The Instance ID
    Value: !Ref EC2Instance

  PublicIP:
    Description: Public IP address of the EC2 instance
    Value: !GetAtt
      - EC2Instance
      - PublicIp

  GitLabRunnerURL:
    Description: URL to register the GitLab Runner
    Value: !Sub
      - http://${PublicIp}
      - PublicIp: !GetAtt EC2Instance.PublicIp
